--- a/app/travelexpense-ui/webapp/css/style.css
+++ b/app/travelexpense-ui/webapp/css/style.css
@@ -68,3 +68,13 @@
     border: 1px solid #ddd; /* optional subtle border */
     box-shadow: 0px 2px 6px rgba(0,0,0,0.1); /* optional shadow for elevation */
 }
+
+.sapMTextBold {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.sapMTextGray {
+    color: gray;
+    font-size: 0.875rem;
+}
